# MinecraftClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Minecraft/: CMakeLists.txt
Minecraft/res/shaders/: AOShader.vs  default.fs  default.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs  water.fs  water.vs
Minecraft/src/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Cube.hpp  FastNoiseLite.h  Game.cpp  Game.hpp  Skybox.cpp  Skybox.hpp  TextureAtlas.cpp  TextureAtlas.hpp
Tellus/: CMakeLists.txt
Tellus/ext/: CMakeLists.txt
Tellus/ext/glad/: CMakeLists.txt
Tellus/ext/glad/include/glad/: glad.h
Tellus/ext/glad/src/: glad.c
Tellus/ext/stb_image/: stb_image.cpp
Tellus/src/: Application.cpp  Application.hpp  Core.hpp  Entry.hpp  Tellus.hpp  Window.cpp  Window.hpp  tspch.h
Tellus/src/Events/: Event.hpp  Events.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Tellus/src/Input/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Tellus/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Tellus/src/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
